Adicionando tarefa da aula 6

--- a/awari-engenharia-de-dados-docker-main/jupyter-notebooks/aula-05-tarefa.ipynb
+++ b/awari-engenharia-de-dados-docker-main/jupyter-notebooks/aula-05-tarefa.ipynb
@@ -21,7 +21,7 @@
    },
    "source": [
     "# O que fazer?\n",
-    "##### A atividade vai ao encontro do que foi visto em aula, sobre tratamento e limpeza de dados usando Pandas. O passo a passo consiste em::\n",
+    "##### A atividade vai ao encontro do que foi visto em aula, sobre tratamento e limpeza de dados usando Pandas. O passo a passo consiste em:\n",
     "\n",
     "1. Fazer download do dataset [Top Youtube Artists](https://www.kaggle.com/datasets/themrityunjaypathak/top-youtube-artist), do Kaggle.\n",
     "2. Tratar as colunas sem informação adicionando o texto “Não informado”.\n",
@@ -284,7 +284,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## 2º Passo\n",
     "##### Tratando as colunas sem informação adicionando o texto “Não informado”."
