--- a/awari-engenharia-de-dados-docker-main/jupyter-notebooks/aula-06.ipynb
+++ b/awari-engenharia-de-dados-docker-main/jupyter-notebooks/aula-06.ipynb
@@ -22,12 +22,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "m2RXTtet4lm7",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.10/site-packages (1.5.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/conda/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.10/site-packages (from pandas) (2022.7.1)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /opt/conda/lib/python3.10/site-packages (from pandas) (1.23.5)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Collecting pymongo\n",
+      "  Downloading pymongo-4.4.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (648 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m648.9/648.9 kB\u001b[0m \u001b[31m6.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting dnspython<3.0.0,>=1.16.0\n",
+      "  Downloading dnspython-2.3.0-py3-none-any.whl (283 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m283.7/283.7 kB\u001b[0m \u001b[31m13.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: dnspython, pymongo\n",
+      "Successfully installed dnspython-2.3.0 pymongo-4.4.0\n",
+      "Collecting boto3\n",
+      "  Downloading boto3-1.26.160-py3-none-any.whl (135 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m135.9/135.9 kB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting botocore<1.30.0,>=1.29.160\n",
+      "  Downloading botocore-1.29.160-py3-none-any.whl (10.9 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.9/10.9 MB\u001b[0m \u001b[31m16.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting jmespath<2.0.0,>=0.7.1\n",
+      "  Downloading jmespath-1.0.1-py3-none-any.whl (20 kB)\n",
+      "Collecting s3transfer<0.7.0,>=0.6.0\n",
+      "  Downloading s3transfer-0.6.1-py3-none-any.whl (79 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.8/79.8 kB\u001b[0m \u001b[31m11.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.160->boto3) (2.8.2)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /opt/conda/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.160->boto3) (1.26.14)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.30.0,>=1.29.160->boto3) (1.16.0)\n",
+      "Installing collected packages: jmespath, botocore, s3transfer, boto3\n",
+      "Successfully installed boto3-1.26.160 botocore-1.29.160 jmespath-1.0.1 s3transfer-0.6.1\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install pandas\n",
     "!pip install pymongo\n",
@@ -43,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -67,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -75,8 +111,8 @@
    "source": [
     "client = boto3.client('s3', \n",
     "    endpoint_url='http://awari-minio-nginx:9000',\n",
-    "    aws_access_key_id='bJ2Bk4ak42UqCk5B',\n",
-    "    aws_secret_access_key='qnZsT8RgQ18rLDZkB1oV1wCnehgT3KlK',\n",
+    "    aws_access_key_id='juRzyBWTAXfcT8ih',\n",
+    "    aws_secret_access_key='si30fZ9CPBfLPsS1r8xrRRG6aG93OS8F',\n",
     "    aws_session_token=None,\n",
     "    config=boto3.session.Config(signature_version='s3v4'),\n",
     "    verify=False,\n",
@@ -86,11 +122,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': '176BF462F9D31B51',\n",
+       "  'HostId': 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'server': 'nginx/1.19.2',\n",
+       "   'date': 'Sun, 25 Jun 2023 16:39:51 GMT',\n",
+       "   'content-length': '0',\n",
+       "   'connection': 'keep-alive',\n",
+       "   'accept-ranges': 'bytes',\n",
+       "   'content-security-policy': 'block-all-mixed-content',\n",
+       "   'etag': '\"ff0e787fc7fe74fb3fc321c5c0aadf5c\"',\n",
+       "   'strict-transport-security': 'max-age=31536000; includeSubDomains',\n",
+       "   'vary': 'Origin, Accept-Encoding',\n",
+       "   'x-amz-bucket-region': 'sa-east-1',\n",
+       "   'x-amz-id-2': 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855',\n",
+       "   'x-amz-request-id': '176BF462F9D31B51',\n",
+       "   'x-content-type-options': 'nosniff',\n",
+       "   'x-xss-protection': '1; mode=block'},\n",
+       "  'RetryAttempts': 0},\n",
+       " 'ETag': '\"ff0e787fc7fe74fb3fc321c5c0aadf5c\"'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Salvando nosso primeiro arquivo no Minio\n",
     "data = {\n",
@@ -116,7 +181,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# MongoDB\n",
     "Iremos salvar agora o nosso dataFrame em um banco de dados não relacional, apenas para ver que é possivel o pandas salvar o resultados em alguns bancos de dados"
@@ -124,11 +191,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>macas</th>\n",
+       "      <th>laranjas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Alex</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Roberto</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Bernardo</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Paulo</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index Unnamed: 0  macas  laranjas\n",
+       "0      0       Alex      3         0\n",
+       "1      1    Roberto      2         3\n",
+       "2      2   Bernardo      0         7\n",
+       "3      3      Paulo      1         2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load csv dataset\n",
     "\n",
@@ -162,11 +302,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Annual Income ($)</th>\n",
+       "      <th>Spending Score (1-100)</th>\n",
+       "      <th>Profession</th>\n",
+       "      <th>Work Experience</th>\n",
+       "      <th>Family Size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>19</td>\n",
+       "      <td>15000</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Healthcare</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>21</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>81</td>\n",
+       "      <td>Engineer</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>20</td>\n",
+       "      <td>86000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Engineer</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>23</td>\n",
+       "      <td>59000</td>\n",
+       "      <td>77</td>\n",
+       "      <td>Lawyer</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>31</td>\n",
+       "      <td>38000</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1995</th>\n",
+       "      <td>1996</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>71</td>\n",
+       "      <td>184387</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Artist</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1996</th>\n",
+       "      <td>1997</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>91</td>\n",
+       "      <td>73158</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Doctor</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997</th>\n",
+       "      <td>1998</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>87</td>\n",
+       "      <td>90961</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Healthcare</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998</th>\n",
+       "      <td>1999</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>77</td>\n",
+       "      <td>182109</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Executive</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1999</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>90</td>\n",
+       "      <td>110610</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Entertainment</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2000 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      CustomerID  Gender  Age  Annual Income ($)  Spending Score (1-100)  \\\n",
+       "0              1    Male   19              15000                      39   \n",
+       "1              2    Male   21              35000                      81   \n",
+       "2              3  Female   20              86000                       6   \n",
+       "3              4  Female   23              59000                      77   \n",
+       "4              5  Female   31              38000                      40   \n",
+       "...          ...     ...  ...                ...                     ...   \n",
+       "1995        1996  Female   71             184387                      40   \n",
+       "1996        1997  Female   91              73158                      32   \n",
+       "1997        1998    Male   87              90961                      14   \n",
+       "1998        1999    Male   77             182109                       4   \n",
+       "1999        2000    Male   90             110610                      52   \n",
+       "\n",
+       "         Profession  Work Experience  Family Size  \n",
+       "0        Healthcare                1            4  \n",
+       "1          Engineer                3            3  \n",
+       "2          Engineer                1            1  \n",
+       "3            Lawyer                0            2  \n",
+       "4     Entertainment                2            6  \n",
+       "...             ...              ...          ...  \n",
+       "1995         Artist                8            7  \n",
+       "1996         Doctor                7            7  \n",
+       "1997     Healthcare                9            2  \n",
+       "1998      Executive                7            2  \n",
+       "1999  Entertainment                5            2  \n",
+       "\n",
+       "[2000 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Salvando data set organizando por pastas no Minio\n",
     "\n",
@@ -177,11 +510,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        Healthcare\n",
+       "1          Engineer\n",
+       "3            Lawyer\n",
+       "4     Entertainment\n",
+       "5            Artist\n",
+       "12        Executive\n",
+       "14           Doctor\n",
+       "16        Homemaker\n",
+       "54        Marketing\n",
+       "79                -\n",
+       "Name: Profession, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = df.fillna(\"-\") # Nós precisamos atrelar o resultado a variavel principal\n",
     "profissoes = df['Profession'].drop_duplicates()\n",
@@ -190,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
