Adjusting the structure of the files from lesson 04

--- a/aula-04/tarefa/aula-04-tarefa.ipynb
+++ b/aula-04/tarefa/aula-04-tarefa.ipynb
@@ -54,14 +54,14 @@
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "Requirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (1.23.5)\n",
       "Requirement already satisfied: matplotlib in /opt/conda/lib/python3.10/site-packages (3.7.0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /opt/conda/lib/python3.10/site-packages (from matplotlib) (1.0.7)\n",
-      "Requirement already satisfied: cycler>=0.10 in /opt/conda/lib/python3.10/site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /opt/conda/lib/python3.10/site-packages (from matplotlib) (3.0.9)\n",
       "Requirement already satisfied: numpy>=1.20 in /opt/conda/lib/python3.10/site-packages (from matplotlib) (1.23.5)\n",
-      "Requirement already satisfied: packaging>=20.0 in /opt/conda/lib/python3.10/site-packages (from matplotlib) (23.0)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in /opt/conda/lib/python3.10/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in /opt/conda/lib/python3.10/site-packages (from matplotlib) (23.0)\n",
       "Requirement already satisfied: fonttools>=4.22.0 in /opt/conda/lib/python3.10/site-packages (from matplotlib) (4.38.0)\n",
       "Requirement already satisfied: pillow>=6.2.0 in /opt/conda/lib/python3.10/site-packages (from matplotlib) (9.4.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /opt/conda/lib/python3.10/site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /opt/conda/lib/python3.10/site-packages (from matplotlib) (1.0.7)\n",
+      "Requirement already satisfied: cycler>=0.10 in /opt/conda/lib/python3.10/site-packages (from matplotlib) (0.11.0)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /opt/conda/lib/python3.10/site-packages (from matplotlib) (1.4.4)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
      ]
@@ -82,8 +82,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -120,12 +122,12 @@
     "        # Atualiza os valores de a e b\n",
     "        a, b = b, a+b\n",
     "\n",
-    "    print(a)"
+    "        print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -134,6 +136,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n",
       "89\n"
      ]
     }
@@ -153,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -177,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -205,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -214,70 +226,70 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Digite o nome de uma fruta ou '999' para sair:  banana\n"
+      "Digite o nome de uma fruta ou '999' para sair:  uva\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "banana já está na lista.\n"
+      "uva já está na lista.\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Digite o nome de uma fruta ou '999' para sair:  pessego\n"
+      "Digite o nome de uma fruta ou '999' para sair:  pepino\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pessego foi adicionada à lista.\n"
+      "pepino foi adicionada à lista.\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Digite o nome de uma fruta ou '999' para sair:  laranja\n"
+      "Digite o nome de uma fruta ou '999' para sair:  tomate\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "laranja já está na lista.\n"
+      "tomate foi adicionada à lista.\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Digite o nome de uma fruta ou '999' para sair:  cereja\n"
+      "Digite o nome de uma fruta ou '999' para sair:  abacate\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cereja foi adicionada à lista.\n"
+      "abacate foi adicionada à lista.\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Digite o nome de uma fruta ou '999' para sair:  limao\n"
+      "Digite o nome de uma fruta ou '999' para sair:  abacate\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "limao foi adicionada à lista.\n"
+      "abacate já está na lista.\n"
      ]
     },
     {
@@ -291,7 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A lista final de frutas é:  ['banana', 'maçã', 'pera', 'uva', 'laranja', 'pessego', 'cereja', 'limao']\n"
+      "A lista final de frutas é:  ['banana', 'maçã', 'pera', 'uva', 'laranja', 'pepino', 'tomate', 'abacate']\n"
      ]
     }
    ],
