Adjusting the structure of the files from lesson 06

--- a/aula-06/atividade/aula-06.ipynb
+++ b/aula-06/atividade/aula-06.ipynb
@@ -37,30 +37,15 @@
       "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.10/site-packages (from pandas) (2022.7.1)\n",
       "Requirement already satisfied: numpy>=1.21.0 in /opt/conda/lib/python3.10/site-packages (from pandas) (1.23.5)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
-      "Collecting pymongo\n",
-      "  Downloading pymongo-4.4.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (648 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m648.9/648.9 kB\u001b[0m \u001b[31m6.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting dnspython<3.0.0,>=1.16.0\n",
-      "  Downloading dnspython-2.3.0-py3-none-any.whl (283 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m283.7/283.7 kB\u001b[0m \u001b[31m13.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: dnspython, pymongo\n",
-      "Successfully installed dnspython-2.3.0 pymongo-4.4.0\n",
-      "Collecting boto3\n",
-      "  Downloading boto3-1.26.160-py3-none-any.whl (135 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m135.9/135.9 kB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting botocore<1.30.0,>=1.29.160\n",
-      "  Downloading botocore-1.29.160-py3-none-any.whl (10.9 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.9/10.9 MB\u001b[0m \u001b[31m16.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting jmespath<2.0.0,>=0.7.1\n",
-      "  Downloading jmespath-1.0.1-py3-none-any.whl (20 kB)\n",
-      "Collecting s3transfer<0.7.0,>=0.6.0\n",
-      "  Downloading s3transfer-0.6.1-py3-none-any.whl (79 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.8/79.8 kB\u001b[0m \u001b[31m11.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.160->boto3) (2.8.2)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /opt/conda/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.160->boto3) (1.26.14)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.30.0,>=1.29.160->boto3) (1.16.0)\n",
-      "Installing collected packages: jmespath, botocore, s3transfer, boto3\n",
-      "Successfully installed boto3-1.26.160 botocore-1.29.160 jmespath-1.0.1 s3transfer-0.6.1\n"
+      "Requirement already satisfied: pymongo in /opt/conda/lib/python3.10/site-packages (4.4.0)\n",
+      "Requirement already satisfied: dnspython<3.0.0,>=1.16.0 in /opt/conda/lib/python3.10/site-packages (from pymongo) (2.3.0)\n",
+      "Requirement already satisfied: boto3 in /opt/conda/lib/python3.10/site-packages (1.26.163)\n",
+      "Requirement already satisfied: s3transfer<0.7.0,>=0.6.0 in /opt/conda/lib/python3.10/site-packages (from boto3) (0.6.1)\n",
+      "Requirement already satisfied: botocore<1.30.0,>=1.29.163 in /opt/conda/lib/python3.10/site-packages (from boto3) (1.29.163)\n",
+      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /opt/conda/lib/python3.10/site-packages (from boto3) (1.0.1)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.163->boto3) (2.8.2)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /opt/conda/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.163->boto3) (1.26.14)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.30.0,>=1.29.163->boto3) (1.16.0)\n"
      ]
     }
    ],
@@ -111,8 +96,8 @@
    "source": [
     "client = boto3.client('s3', \n",
     "    endpoint_url='http://awari-minio-nginx:9000',\n",
-    "    aws_access_key_id='juRzyBWTAXfcT8ih',\n",
-    "    aws_secret_access_key='si30fZ9CPBfLPsS1r8xrRRG6aG93OS8F',\n",
+    "    aws_access_key_id='na4wD5z41jD23z0t', #substitua por sua access key id\n",
+    "    aws_secret_access_key='FVbYEyuqwvVBWcQ3igbpcw7hqTIbWo0p', #substitua por sua secret access key\n",
     "    aws_session_token=None,\n",
     "    config=boto3.session.Config(signature_version='s3v4'),\n",
     "    verify=False,\n",
@@ -130,11 +115,11 @@
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '176BF462F9D31B51',\n",
+       "{'ResponseMetadata': {'RequestId': '176CFF68BFDC80FE',\n",
        "  'HostId': 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855',\n",
        "  'HTTPStatusCode': 200,\n",
        "  'HTTPHeaders': {'server': 'nginx/1.19.2',\n",
-       "   'date': 'Sun, 25 Jun 2023 16:39:51 GMT',\n",
+       "   'date': 'Thu, 29 Jun 2023 02:13:05 GMT',\n",
        "   'content-length': '0',\n",
        "   'connection': 'keep-alive',\n",
        "   'accept-ranges': 'bytes',\n",
@@ -142,9 +127,8 @@
        "   'etag': '\"ff0e787fc7fe74fb3fc321c5c0aadf5c\"',\n",
        "   'strict-transport-security': 'max-age=31536000; includeSubDomains',\n",
        "   'vary': 'Origin, Accept-Encoding',\n",
-       "   'x-amz-bucket-region': 'sa-east-1',\n",
        "   'x-amz-id-2': 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855',\n",
-       "   'x-amz-request-id': '176BF462F9D31B51',\n",
+       "   'x-amz-request-id': '176CFF68BFDC80FE',\n",
        "   'x-content-type-options': 'nosniff',\n",
        "   'x-xss-protection': '1; mode=block'},\n",
        "  'RetryAttempts': 0},\n",
@@ -297,12 +281,12 @@
    "source": [
     "# Você pode usar o Studio 3T para visualizar os dados no mongoDB\n",
     "\n",
-    "![Studio 3T](arquivos/imgs/studio3t.png)"
+    "![Studio 3T](./arquivos/studio3t.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -495,7 +479,7 @@
        "[2000 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,14 +487,14 @@
    "source": [
     "# Salvando data set organizando por pastas no Minio\n",
     "\n",
-    "df = pd.read_csv('arquivos/customers.csv')\n",
+    "df = pd.read_csv('./arquivos/customers.csv')\n",
     "\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -531,7 +515,7 @@
        "Name: Profession, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
