--- a/aula-06/tarefa/aula-06-tarefa.ipynb
+++ b/aula-06/tarefa/aula-06-tarefa.ipynb
@@ -23,7 +23,7 @@
     "# O que fazer?\n",
     "##### Com base no que foi visto em aula e com base nos dados e arquivos tratados na 5ª aula (aula anterior), a atividade consiste, sempre no workspace em Docker, em:\n",
     "\n",
-    "1. Criar script para ler os datasets em /exercicios/municipios-estados/csv — o script deve:\n",
+    "1. Criar script para ler os datasets em ./arquivos/ — o script deve:\n",
     "    1. Criar uma pasta nomeada com a sigla da UF para cada estado encontrado no arquivo JSON;\n",
     "    2. Organizar as cidades por estado um único arquivo CSV, nomeado como cidades.csv;\n",
     "    3. Salvar esse arquivo cidades.csv dentro da pasta da UF (estado) correspondente.\n",
@@ -57,13 +57,13 @@
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "Requirement already satisfied: pymongo in /opt/conda/lib/python3.10/site-packages (4.4.0)\n",
       "Requirement already satisfied: dnspython<3.0.0,>=1.16.0 in /opt/conda/lib/python3.10/site-packages (from pymongo) (2.3.0)\n",
-      "Requirement already satisfied: boto3 in /opt/conda/lib/python3.10/site-packages (1.26.160)\n",
+      "Requirement already satisfied: boto3 in /opt/conda/lib/python3.10/site-packages (1.26.163)\n",
+      "Requirement already satisfied: botocore<1.30.0,>=1.29.163 in /opt/conda/lib/python3.10/site-packages (from boto3) (1.29.163)\n",
       "Requirement already satisfied: s3transfer<0.7.0,>=0.6.0 in /opt/conda/lib/python3.10/site-packages (from boto3) (0.6.1)\n",
-      "Requirement already satisfied: botocore<1.30.0,>=1.29.160 in /opt/conda/lib/python3.10/site-packages (from boto3) (1.29.160)\n",
       "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /opt/conda/lib/python3.10/site-packages (from boto3) (1.0.1)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /opt/conda/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.160->boto3) (1.26.14)\n",
-      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.160->boto3) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.30.0,>=1.29.160->boto3) (1.16.0)\n"
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.163->boto3) (2.8.2)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /opt/conda/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.163->boto3) (1.26.14)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.30.0,>=1.29.163->boto3) (1.16.0)\n"
      ]
     }
    ],
@@ -83,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -198,19 +200,19 @@
        "4         15  PA      Pará     -3.79     -52.48  Norte"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfEstados = pd.read_csv('./arquivos/municipios-estados/csv/estados.csv')\n",
+    "dfEstados = pd.read_csv('./arquivos/estados.csv')\n",
     "dfEstados.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -328,13 +330,13 @@
        "4       401   91  America/Sao_Paulo  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfMunicipios = pd.read_csv('./arquivos/municipios-estados/csv/municipios.csv')\n",
+    "dfMunicipios = pd.read_csv('./arquivos/municipios.csv')\n",
     "dfMunicipios.head()"
    ]
   },
@@ -349,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -627,7 +629,7 @@
        "[5570 rows x 14 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -655,8 +657,8 @@
    "source": [
     "client = boto3.client('s3', \n",
     "    endpoint_url='http://awari-minio-nginx:9000',\n",
-    "    aws_access_key_id='juRzyBWTAXfcT8ih',\n",
-    "    aws_secret_access_key='si30fZ9CPBfLPsS1r8xrRRG6aG93OS8F',\n",
+    "    aws_access_key_id='na4wD5z41jD23z0t', #substitua por sua access key id\n",
+    "    aws_secret_access_key='FVbYEyuqwvVBWcQ3igbpcw7hqTIbWo0p', #substitua por sua secret access key\n",
     "    aws_session_token=None,\n",
     "    config=boto3.session.Config(signature_version='s3v4'),\n",
     "    verify=False,\n",
@@ -675,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -713,7 +715,7 @@
        "Name: uf, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -758,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -779,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -807,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -818,7 +820,7 @@
     "    obj = client.get_object(\n",
     "        Bucket='aula-06', \n",
     "        Key=f\"tarefa/{uf}/{uf}.csv\"\n",
-    "    ).get(\"Body\")c\n",
+    "    ).get(\"Body\")\n",
     "\n",
     "    data = pd.read_csv(obj)\n",
     "    data.reset_index(inplace=True)\n",
@@ -826,6 +828,7 @@
     "    \n",
     "    # Criar a coleção para o estado atual e inserir os dados\n",
     "    collection = db[uf]\n",
+    "    data_dict = data.to_dict(\"records\")\n",
     "    collection.insert_many(data_dict)"
    ]
   },
@@ -840,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
@@ -886,7 +889,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>649886fc5dddc04386ebffdf</td>\n",
+       "      <td>649ceb3c7ca6d726357678f1</td>\n",
        "      <td>3500105</td>\n",
        "      <td>Adamantina</td>\n",
        "      <td>-21.6820</td>\n",
@@ -904,7 +907,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>649886fc5dddc04386ebffe0</td>\n",
+       "      <td>649ceb3c7ca6d726357678f2</td>\n",
        "      <td>3500204</td>\n",
        "      <td>Adolfo</td>\n",
        "      <td>-21.2325</td>\n",
@@ -922,7 +925,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>649886fc5dddc04386ebffe1</td>\n",
+       "      <td>649ceb3c7ca6d726357678f3</td>\n",
        "      <td>3500303</td>\n",
        "      <td>Aguaí</td>\n",
        "      <td>-22.0572</td>\n",
@@ -940,7 +943,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>649886fc5dddc04386ebffe2</td>\n",
+       "      <td>649ceb3c7ca6d726357678f4</td>\n",
        "      <td>3500402</td>\n",
        "      <td>Águas da Prata</td>\n",
        "      <td>-21.9319</td>\n",
@@ -958,7 +961,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>649886fc5dddc04386ebffe3</td>\n",
+       "      <td>649ceb3c7ca6d726357678f5</td>\n",
        "      <td>3500501</td>\n",
        "      <td>Águas de Lindóia</td>\n",
        "      <td>-22.4733</td>\n",
@@ -993,8 +996,8 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>640</th>\n",
-       "      <td>649886fc5dddc04386ec025f</td>\n",
+       "      <th>1285</th>\n",
+       "      <td>649cec147ca6d7263576a6f5</td>\n",
        "      <td>3556909</td>\n",
        "      <td>Vista Alegre do Alto</td>\n",
        "      <td>-21.1692</td>\n",
@@ -1011,8 +1014,8 @@
        "      <td>Sudeste</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>641</th>\n",
-       "      <td>649886fc5dddc04386ec0260</td>\n",
+       "      <th>1286</th>\n",
+       "      <td>649cec147ca6d7263576a6f6</td>\n",
        "      <td>3556958</td>\n",
        "      <td>Vitória Brasil</td>\n",
        "      <td>-20.1956</td>\n",
@@ -1029,8 +1032,8 @@
        "      <td>Sudeste</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>642</th>\n",
-       "      <td>649886fc5dddc04386ec0261</td>\n",
+       "      <th>1287</th>\n",
+       "      <td>649cec147ca6d7263576a6f7</td>\n",
        "      <td>3557006</td>\n",
        "      <td>Votorantim</td>\n",
        "      <td>-23.5446</td>\n",
@@ -1047,8 +1050,8 @@
        "      <td>Sudeste</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>643</th>\n",
-       "      <td>649886fc5dddc04386ec0262</td>\n",
+       "      <th>1288</th>\n",
+       "      <td>649cec147ca6d7263576a6f8</td>\n",
        "      <td>3557105</td>\n",
        "      <td>Votuporanga</td>\n",
        "      <td>-20.4237</td>\n",
@@ -1065,8 +1068,8 @@
        "      <td>Sudeste</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>644</th>\n",
-       "      <td>649886fc5dddc04386ec0263</td>\n",
+       "      <th>1289</th>\n",
+       "      <td>649cec147ca6d7263576a6f9</td>\n",
        "      <td>3557154</td>\n",
        "      <td>Zacarias</td>\n",
        "      <td>-21.0506</td>\n",
@@ -1084,53 +1087,53 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>645 rows × 15 columns</p>\n",
+       "<p>1290 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          _id  codigo_ibge                nome_x  latitude_x  \\\n",
-       "0    649886fc5dddc04386ebffdf      3500105            Adamantina    -21.6820   \n",
-       "1    649886fc5dddc04386ebffe0      3500204                Adolfo    -21.2325   \n",
-       "2    649886fc5dddc04386ebffe1      3500303                 Aguaí    -22.0572   \n",
-       "3    649886fc5dddc04386ebffe2      3500402        Águas da Prata    -21.9319   \n",
-       "4    649886fc5dddc04386ebffe3      3500501      Águas de Lindóia    -22.4733   \n",
-       "..                        ...          ...                   ...         ...   \n",
-       "640  649886fc5dddc04386ec025f      3556909  Vista Alegre do Alto    -21.1692   \n",
-       "641  649886fc5dddc04386ec0260      3556958        Vitória Brasil    -20.1956   \n",
-       "642  649886fc5dddc04386ec0261      3557006            Votorantim    -23.5446   \n",
-       "643  649886fc5dddc04386ec0262      3557105           Votuporanga    -20.4237   \n",
-       "644  649886fc5dddc04386ec0263      3557154              Zacarias    -21.0506   \n",
+       "                           _id  codigo_ibge                nome_x  latitude_x  \\\n",
+       "0     649ceb3c7ca6d726357678f1      3500105            Adamantina    -21.6820   \n",
+       "1     649ceb3c7ca6d726357678f2      3500204                Adolfo    -21.2325   \n",
+       "2     649ceb3c7ca6d726357678f3      3500303                 Aguaí    -22.0572   \n",
+       "3     649ceb3c7ca6d726357678f4      3500402        Águas da Prata    -21.9319   \n",
+       "4     649ceb3c7ca6d726357678f5      3500501      Águas de Lindóia    -22.4733   \n",
+       "...                        ...          ...                   ...         ...   \n",
+       "1285  649cec147ca6d7263576a6f5      3556909  Vista Alegre do Alto    -21.1692   \n",
+       "1286  649cec147ca6d7263576a6f6      3556958        Vitória Brasil    -20.1956   \n",
+       "1287  649cec147ca6d7263576a6f7      3557006            Votorantim    -23.5446   \n",
+       "1288  649cec147ca6d7263576a6f8      3557105           Votuporanga    -20.4237   \n",
+       "1289  649cec147ca6d7263576a6f9      3557154              Zacarias    -21.0506   \n",
        "\n",
-       "     longitude_x  capital  codigo_uf  siafi_id  ddd       fuso_horario  uf  \\\n",
-       "0       -51.0737        0         35      6101   18  America/Sao_Paulo  SP   \n",
-       "1       -49.6451        0         35      6103   17  America/Sao_Paulo  SP   \n",
-       "2       -46.9735        0         35      6105   19  America/Sao_Paulo  SP   \n",
-       "3       -46.7176        0         35      6107   19  America/Sao_Paulo  SP   \n",
-       "4       -46.6314        0         35      6109   19  America/Sao_Paulo  SP   \n",
-       "..           ...      ...        ...       ...  ...                ...  ..   \n",
-       "640     -48.6284        0         35      7241   16  America/Sao_Paulo  SP   \n",
-       "641     -50.4875        0         35       828   17  America/Sao_Paulo  SP   \n",
-       "642     -47.4388        0         35      7243   15  America/Sao_Paulo  SP   \n",
-       "643     -49.9781        0         35      7245   17  America/Sao_Paulo  SP   \n",
-       "644     -50.0552        0         35      2973   18  America/Sao_Paulo  SP   \n",
+       "      longitude_x  capital  codigo_uf  siafi_id  ddd       fuso_horario  uf  \\\n",
+       "0        -51.0737        0         35      6101   18  America/Sao_Paulo  SP   \n",
+       "1        -49.6451        0         35      6103   17  America/Sao_Paulo  SP   \n",
+       "2        -46.9735        0         35      6105   19  America/Sao_Paulo  SP   \n",
+       "3        -46.7176        0         35      6107   19  America/Sao_Paulo  SP   \n",
+       "4        -46.6314        0         35      6109   19  America/Sao_Paulo  SP   \n",
+       "...           ...      ...        ...       ...  ...                ...  ..   \n",
+       "1285     -48.6284        0         35      7241   16  America/Sao_Paulo  SP   \n",
+       "1286     -50.4875        0         35       828   17  America/Sao_Paulo  SP   \n",
+       "1287     -47.4388        0         35      7243   15  America/Sao_Paulo  SP   \n",
+       "1288     -49.9781        0         35      7245   17  America/Sao_Paulo  SP   \n",
+       "1289     -50.0552        0         35      2973   18  America/Sao_Paulo  SP   \n",
        "\n",
-       "        nome_y  latitude_y  longitude_y   regiao  \n",
-       "0    São Paulo      -22.19       -48.79  Sudeste  \n",
-       "1    São Paulo      -22.19       -48.79  Sudeste  \n",
-       "2    São Paulo      -22.19       -48.79  Sudeste  \n",
-       "3    São Paulo      -22.19       -48.79  Sudeste  \n",
-       "4    São Paulo      -22.19       -48.79  Sudeste  \n",
-       "..         ...         ...          ...      ...  \n",
-       "640  São Paulo      -22.19       -48.79  Sudeste  \n",
-       "641  São Paulo      -22.19       -48.79  Sudeste  \n",
-       "642  São Paulo      -22.19       -48.79  Sudeste  \n",
-       "643  São Paulo      -22.19       -48.79  Sudeste  \n",
-       "644  São Paulo      -22.19       -48.79  Sudeste  \n",
+       "         nome_y  latitude_y  longitude_y   regiao  \n",
+       "0     São Paulo      -22.19       -48.79  Sudeste  \n",
+       "1     São Paulo      -22.19       -48.79  Sudeste  \n",
+       "2     São Paulo      -22.19       -48.79  Sudeste  \n",
+       "3     São Paulo      -22.19       -48.79  Sudeste  \n",
+       "4     São Paulo      -22.19       -48.79  Sudeste  \n",
+       "...         ...         ...          ...      ...  \n",
+       "1285  São Paulo      -22.19       -48.79  Sudeste  \n",
+       "1286  São Paulo      -22.19       -48.79  Sudeste  \n",
+       "1287  São Paulo      -22.19       -48.79  Sudeste  \n",
+       "1288  São Paulo      -22.19       -48.79  Sudeste  \n",
+       "1289  São Paulo      -22.19       -48.79  Sudeste  \n",
        "\n",
-       "[645 rows x 15 columns]"
+       "[1290 rows x 15 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
